--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "es6-blank-template",
+  "name": "arms",
   "version": "1.0.0",
   "description": "This is a starter template for a simple es6 project using babel for transpiling with prettier and eslint configuration.",
   "main": "./src/index.js",
@@ -14,11 +14,31 @@
   "keywords": [
     "es6",
     "template",
-    "es6-start-template"
+    "es6-start-template",
+    "renting",
+    "apartment",
+    "system",
+    "management",
+    "tenant",
+    "room"
   ],
   "type": "module",
-  "author": "https://github.com/Open-Source-Ghana",
+  "author": "Otumian-empire@github.com",
   "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.6.0",
+    "joi-password": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
+    "redis": "^4.2.0",
+    "redis-om": "^0.3.6",
+    "winston": "^3.7.2"
+  },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
