--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "arms",
   "version": "1.0.0",
   "description": "This is a starter template for a simple es6 project using babel for transpiling with prettier and eslint configuration.",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "scripts": {
+    "ts:build": "npx tsc",
+    "ts:start": "npx ts-node src/index.ts",
     "build": "babel ./src --out-dir build",
     "dev": "nodemon",
-    "start": "node src/index.js",
-    "format": "npx prettier --write ./src",
-    "check": "npx prettier --check ./src",
-    "lint": "npx eslint ./src"
+    "start": "node src/index.ts",
+    "check:format": "npx prettier --check ./src",
+    "fix:format": "npx prettier --write ./src",
+    "check:lint": "npx eslint ./src",
+    "fix:lint": "npx eslint --fix ./src"
   },
   "keywords": [
     "es6",
@@ -22,7 +25,6 @@
     "tenant",
     "room"
   ],
-  "type": "module",
   "author": "Otumian-empire@github.com",
   "license": "MIT",
   "dependencies": {
@@ -36,14 +38,24 @@
     "morgan": "^1.10.0",
     "morgan-json": "^1.1.0",
     "redis": "^4.2.0",
-    "redis-om": "^0.3.6",
+    "redis-om": "^0.2.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/morgan-json": "^1.1.0",
+    "@types/redis": "^4.0.11",
     "eslint": "^8.17.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
